Graphics mostly working but circumradius is off, testing against standard circle